# fable-2.0

./: .gitignore  CHANGELOG.md  FABLE_2.0_PLAN.md  FABLE_2_0_PLAN.md  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
.gemini/agents/: framework-auditor.md  framework-expert.md
docs/: FABLE_2.0_PLAN.md  PROMPTING_STRATEGY.md  vision.md
docs/phases/: PHASE_10_NARRATIVE_GUARDRAILS.md  PHASE_12_SUSPICION_ENGINE.md  PHASE_1_STATE_MODEL.md  PHASE_2_GRAPHRAG.md  PHASE_3_NODE_CONFIG.md  PHASE_4_ORCHESTRATION.md  PHASE_5_WORLD_BOOT.md  PHASE_6_SERVER_INTEGRATION.md  PHASE_7_PRODUCTIONIZATION.md  PHASE_8_DYNAMIC_INIT.md  PHASE_9_NARRATIVE_INTELLIGENCE.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: backfill_canon_chunk_entities.py  build_canon_character_profiles.py  dedupe_character_nodes.py  ingest_worm.py  scrape_worm.py
src/: app_container.py  database.py  main.py  validate_phase_1.py  validate_phase_2.py  validate_phase_3.py  validate_phase_4.py  validate_phase_5.py
src/graph/: workflow.py
src/nodes/: archivist.py  archivist_merge.py  auditor.py  choice_generator.py  enrich_analyzer.py  init_research.py  intent_router.py  lore_ingestion.py  lore_keeper.py  recovery.py  storyteller.py  storyteller_merge.py  summarizer.py  summarizer_persist.py  user_choice_input.py  world_builder.py
src/plugins/: global_instruction.py  suspicion_plugin.py  telemetry.py
src/services/: embedding_service.py  memory_service.py  session_manager.py
src/state/: archivist_delta.py  bible_models.py  chapter_output.py  (+6 more)
(+14 files in other folders)
